@@ -70,6 +70,7 @@ AC_CHECK_HEADERS(sys/types.h)
 AC_CHECK_HEADERS(sys/socket.h)
 AC_CHECK_HEADERS(arpa/inet.h)
 AC_CHECK_HEADERS(netinet/in.h)
+AC_CHECK_HEADERS(paths.h)
 AC_HAVE_INADDR_NONE
 
 dnl ------------------------------------------------------------
